--- a/post-service/Dockerfile
+++ b/post-service/Dockerfile
@@ -1,3 +1,3 @@
 FROM openjdk:17-jdk-slim
-COPY target/user-service-0.0.1-SNAPSHOT.jar user-service-0.0.1-SNAPSHOT.jar
-ENTRYPOINT ["java","-jar","user-service-0.0.1-SNAPSHOT.jar"]
+COPY target/post-service-0.0.1-SNAPSHOT.jar post-service-0.0.1-SNAPSHOT.jar
+ENTRYPOINT ["java","-jar","post-service-0.0.1-SNAPSHOT.jar"]
