--- a/post-service/pom.xml
+++ b/post-service/pom.xml
@@ -12,8 +12,8 @@
     <artifactId>post-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>user-service</name>
-    <description>user-service</description>
+    <name>post-service</name>
+    <description>post-service</description>
     <url/>
     <licenses>
         <license/>
@@ -76,6 +76,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
         </dependency>
     </dependencies>
 
