--- a/post-service/src/main/resources/application.yml
+++ b/post-service/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: 8090
 spring:
   data:
+    mongodb:
+      uri: mongodb://localhost:27017/SocialV
     redis:
       host: localhost
       port: 6379
