--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -2,8 +2,14 @@ server:
   port: 8080
 spring:
   application:
-    name: user-service
+    name: "user-service"
   profiles:
-    active: dev
+    active: "dev"
   config:
-    import: "optional:configserver:http://localhost:8071/"
+    import: "optional:configserver:${CONFIG_SERVER_URL:http://localhost:8071/}"
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
