--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>config-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>config-server</name>
 	<description>config-server</description>
 	<url/>
