--- a/config-server/src/main/resources/config/post-service.yml
+++ b/config-server/src/main/resources/config/post-service.yml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://localhost:27017/SocialV
+      uri: mongodb://host.docker.internal:27017/SocialV
     redis:
       host: localhost
       port: 6379
@@ -17,7 +17,7 @@ spring:
           max-wait: -1ms      # Th?i gian ch? t?i ?a khi pool c?n connection
 
   datasource:
-    url: jdbc:mysql://localhost:3306/postSocialV
+    url: jdbc:mysql://host.docker.internal:3306/postSocialV
     username: root
     password: 12345678
     driver-class-name: com.mysql.cj.jdbc.Driver
