--- a/config-server/src/main/resources/config/eurekaserver.yml
+++ b/config-server/src/main/resources/config/eurekaserver.yml
@@ -3,7 +3,7 @@ server:
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: host.docker.internal
   client:
     fetchRegistry: false
     registerWithEureka: false
