--- a/docker-compose/common-config.yml
+++ b/docker-compose/common-config.yml
@@ -21,3 +21,9 @@ services:
       CONFIG_SERVER_URL: http://configserver:8071/
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
       SPRING_CLOUD_CONFIG_URI: http://configserver:8071/
+
+  microservice-eureka-config:
+    extends:
+      service: microservice-configserver-config
+    environment:
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka/
