add log4j, requestId, filter request

--- a/config-server/src/main/resources/config/post-service-dev.yml
+++ b/config-server/src/main/resources/config/post-service-dev.yml
@@ -37,3 +37,6 @@ logging:
   level:
     org.hibernate.SQL: DEBUG                               # Log SQL query
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE   # Log binding values
+    com:
+      example:
+        postservice: DEBUG
