--- a/config-server/src/main/resources/config/user-service.yml
+++ b/config-server/src/main/resources/config/user-service.yml
@@ -35,3 +35,6 @@ logging:
   level:
     org.hibernate.SQL: DEBUG                               # Log SQL query
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE   # Log binding values
+    com:
+      example:
+        userservice: DEBUG
