--- a/post-service/Dockerfile
+++ b/post-service/Dockerfile
@@ -1,3 +1,4 @@
 FROM openjdk:17-jdk-slim
+RUN apt-get update && apt-get install -y curl
 COPY target/post-service-0.0.1-SNAPSHOT.jar post-service-0.0.1-SNAPSHOT.jar
 ENTRYPOINT ["java","-jar","post-service-0.0.1-SNAPSHOT.jar"]
