--- a/noti-service/pom.xml
+++ b/noti-service/pom.xml
@@ -60,6 +60,10 @@
 			<version>2.11.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
