--- a/config-server/src/main/resources/config/noti-service-dev.yml
+++ b/config-server/src/main/resources/config/noti-service-dev.yml
@@ -15,7 +15,7 @@ spring:
           max-wait: -1ms      # Th?i gian ch? t?i ?a khi pool c?n connection
 
   datasource:
-    url: jdbc:mysql://host.docker.internal:3306/accountSocialV
+    url: jdbc:mysql://host.docker.internal:3306/postSocialV
     username: root
     password: 12345678
     driver-class-name: com.mysql.cj.jdbc.Driver
